@@ -2,7 +2,7 @@
 
 /*  IIP fcgi server module
 
-    Copyright (C) 2000-2019 Ruven Pillay.
+    Copyright (C) 2000-2020 Ruven Pillay.
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -120,6 +120,13 @@ class IIPImage {
   /// The colour space of the image
   ColourSpaces colourspace;
 
+  /// Native physical resolution in both X and Y
+  float dpi_x, dpi_y;
+
+  /// Units for native physical resolution
+  /** 0=unknown, 1=pixels/inch, 2=pixels/cm */
+  int dpi_units;
+
   /// The number of available resolutions in this image
   unsigned int numResolutions;
 
@@ -164,6 +171,9 @@ class IIPImage {
     tile_width( 0 ),
     tile_height( 0 ),
     colourspace( NONE ),
+    dpi_x( 0 ),
+    dpi_y( 0 ),
+    dpi_units( 0 ),
     numResolutions( 0 ),
     bpc( 0 ),
     channels( 0 ),
@@ -185,6 +195,9 @@ class IIPImage {
     tile_width( 0 ),
     tile_height( 0 ),
     colourspace( NONE ),
+    dpi_x( 0 ),
+    dpi_y( 0 ),
+    dpi_units( 0 ),
     numResolutions( 0 ),
     bpc( 0 ),
     channels( 0 ),
@@ -215,6 +228,9 @@ class IIPImage {
     tile_width( image.tile_width ),
     tile_height( image.tile_height ),
     colourspace( image.colourspace ),
+    dpi_x( image.dpi_x ),
+    dpi_y( image.dpi_y ),
+    dpi_units( image.dpi_units ),
     numResolutions( image.numResolutions ),
     bpc( image.bpc ),
     channels( image.channels ),
